--- a/IonChat/src/app/home/home.component.html
+++ b/IonChat/src/app/home/home.component.html
@@ -1,3 +1,29 @@
-<p>
-  home works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="item branding">
+    <img id="main-logo" src="assets/logo.png" alt="Logo de IonChat">
+    <a class="navbar-brand" href="#">IonChat</a>
+  </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
+    aria-expanded="true" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+
+  </button>
+
+  <div class="navbar-collapse collapse show" id="navbarColor01" style="">
+
+    <ul class="navbar-nav mr-auto end">
+
+      <form class="form-inline">
+        <input class="form-control footbarInput" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-info estiloRedondo" type="submit"><i class="fas fa-search"></i></button>
+      </form>
+
+    </ul>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+
+  </div>
+</nav>
