--- a/IonChat/src/app/contact/contact.component.html
+++ b/IonChat/src/app/contact/contact.component.html
@@ -1,3 +1,30 @@
-<p>
-  contact works!
-</p>
+<app-navbar></app-navbar>
+<div class="row">
+<div class="col-10"></div>
+
+<div class="col-2">
+   
+  <ul class="list-group">
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Francisco Borja
+      <span class="badge badge-primary badge-pill">14</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Juan
+      <span class="badge badge-primary badge-pill">2</span>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+        Pedro
+        <span class="badge badge-primary badge-pill">2</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+          Diego Encalada
+          <span class="badge badge-primary badge-pill">2</span>
+        </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+      Erick Erraez
+      <span class="badge badge-primary badge-pill">1</span>
+    </li>
+  </ul>
+</div>
+</div>
