--- a/IonChat/src/app/login/login.component.html
+++ b/IonChat/src/app/login/login.component.html
@@ -1,3 +1,7 @@
-<p>
-  login works!
-</p>
+<app-navbar></app-navbar>
+<div class="row">
+  <div class="col-4"></div>
+  <div class=" col-4">
+    <app-body></app-body>
+  </div>
+</div>
