Prototipo Pantalla Principal

--- a/IonChat/src/app/home/home.component.html
+++ b/IonChat/src/app/home/home.component.html
@@ -21,9 +21,40 @@
     </ul>
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+        <a class="nav-link inline" href="#"><i class="far fa-user-circle fa-2x"></i> Diego <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-users fa-2x"></i><span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"> <i class="fas fa-envelope fa-2x"></i><span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-sign-out-alt fa-2x"></i>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
       </li>
     </ul>
 
   </div>
 </nav>
+<div class="row backgroundHome">
+  
+  <div class="col-3">
+
+  </div>
+  <div class="col-6">
+    <app-muro> </app-muro>
+  </div>
+  <div class="col-3">
+
+  </div>
+</div>
