--- a/IonChat/src/app/app.component.html
+++ b/IonChat/src/app/app.component.html
@@ -1,3 +1,54 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="item branding" routerLink="/home">
+        <img id="main-logo" src="assets/logo.png" alt="Logo de IonChat">
+        <a class="navbar-brand" style="color:white;">IonChat</a>
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
+        aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
 
-<router-outlet></router-outlet>
-<app-home></app-home>
+    </button>
+
+    <div class="navbar-collapse collapse show" id="navbarColor01">
+
+        <ul class="navbar-nav mr-auto end">
+
+            <form class="form-inline">
+                <input class="form-control footbarInput" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-info estiloRedondo" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+
+        </ul>
+        <ul class="nav justify-content-end" style="color:#5b8bec;">
+            <li class="nav-item">
+                <a class="nav-link inline" routerLink="/profile"><i class="far fa-user-circle fa-2x"></i> Diego <span
+                        class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"><i class="fas fa-users fa-2x"></i><span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"> <i class="fas fa-envelope fa-2x"></i><span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-sign-out-alt fa-2x"></i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+<div class="row backgroundHome">
+    <div class="col-12">
+        <router-outlet></router-outlet>
+    </div>
+</div>
