--- a/IonChat/src/app/friends/friends.component.html
+++ b/IonChat/src/app/friends/friends.component.html
@@ -1,3 +1,10 @@
-<p>
-  friends works!
-</p>
+<div class="row">
+  <div class="col-3">
+  </div>
+  <div class="col-6">
+    <app-solicitudes></app-solicitudes>
+    <br>
+    <app-amistad></app-amistad>
+</div>
+<div class="col-3">
+</div>
