--- a/IonChat/src/app/profile/profile.component.html
+++ b/IonChat/src/app/profile/profile.component.html
@@ -1,3 +1,14 @@
-<p>
-  profile works!
-</p>
+<app-img></app-img>
+
+<div class="row">
+  <div class="col-1">
+</div>
+  <div class="col-4">
+    <app-imgper></app-imgper>
+    <app-foto></app-foto>
+  </div>
+  <div class="col-6">
+    <app-publicaciones></app-publicaciones>
+    </div>
+
+  
