--- a/IonChat/src/app/contact/contact.component.css
+++ b/IonChat/src/app/contact/contact.component.css
@@ -1,20 +1,25 @@
 #main-logo {
-    width: 40px;
-  }
-  .footbarInput {
-    background-color: rgb(255, 255, 255);
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 30px;
-    position: relative;
-    border: 1px solid #000000;
-    padding: 0 35px 0 35px;
-    top: 0px;
-    left: 0px;
-  }
-  .estiloRedondo {
-    border-radius: 30px;
-  }
-  .backgroundHome{
-    background-color: rgb(156, 195, 231);
-  }
+  width: 40px;
+}
+.footbarInput {
+  background-color: rgb(255, 255, 255);
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 30px;
+  position: relative;
+  border: 1px solid #000000;
+  padding: 0 35px 0 35px;
+  top: 0px;
+  left: 0px;
+}
+.estiloRedondo {
+  border-radius: 30px;
+}
+.backgroundHome {
+  background-color: rgb(156, 195, 231);
+}
+.contact-scroll {
+  height: 550px;
+  padding: 0px;
+  overflow-y: auto;
+}
