--- a/IonChat/src/app/contact/contact.component.html
+++ b/IonChat/src/app/contact/contact.component.html
@@ -1,93 +1,73 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="item branding">
-    <img id="main-logo" src="assets/logo.png" alt="Logo de IonChat">
-    <a class="navbar-brand" href="#">IonChat</a>
-  </div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
-    aria-expanded="true" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-
-  </button>
-
-  <div class="navbar-collapse collapse show" id="navbarColor01" style="">
-
-    <ul class="navbar-nav mr-auto end">
-
-      <form class="form-inline">
-        <input class="form-control footbarInput" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-info estiloRedondo" type="submit"><i class="fas fa-search"></i></button>
-      </form>
-
-    </ul>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link inline" href="#"><i class="far fa-user-circle fa-2x"></i> Diego <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-users fa-2x"></i><span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"> <i class="fas fa-envelope fa-2x"></i><span class="sr-only">(current)</span></a>
-      </li>
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-sign-out-alt fa-2x"></i>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-
-  </div>
-</nav>
 <div class="row">
-  <div class="col-10"></div>
-
-  <div class="col-2">
-
-    <ul class="list-group">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Francisco Borja
-        <span class="badge badge-primary badge-pill">14</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Juan
-        <span class="badge badge-primary badge-pill">2</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Pedro
-        <span class="badge badge-primary badge-pill"></span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Encalada
-        <span class="badge badge-primary badge-pill">50</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Erick Erraez
-        <span class="badge badge-primary badge-pill">1</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Mofle
-        <span class="badge badge-primary badge-pill">5</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Luis
-        <span class="badge badge-primary badge-pill"></span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Adrian
-        <span class="badge badge-primary badge-pill"></span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Pedro
+  <div class="col-12">
+    <br>
+    <div #scrollBox class="contact-scroll" [scrollTop]="scrollBox.scrollHeight">
+      <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Francisco Borja
+          <span class="badge badge-primary badge-pill">14</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Juan
+          <span class="badge badge-primary badge-pill">2</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Pedro
           <span class="badge badge-primary badge-pill"></span>
         </li>
-    </ul>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Encalada
+          <span class="badge badge-primary badge-pill">50</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Erick Erraez
+          <span class="badge badge-primary badge-pill">1</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Mofle
+          <span class="badge badge-primary badge-pill">5</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Luis
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Adrian
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Pedro
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Francisco Borja
+          <span class="badge badge-primary badge-pill">14</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Juan
+          <span class="badge badge-primary badge-pill">2</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Pedro
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Encalada
+          <span class="badge badge-primary badge-pill">50</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Luis
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Adrian
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Pedro
+          <span class="badge badge-primary badge-pill"></span>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
