--- a/IonChat/src/app/login/login.component.html
+++ b/IonChat/src/app/login/login.component.html
@@ -1,7 +1,50 @@
-<app-navbar></app-navbar>
+<!--<div class="row">
+  <div class="col-12 text-center">
+    <div class="card">
+      <div class="card-body" *ngIf="status =='login'">
+        <h3>Login</h3>
+        <form>
+          <div class="form-group">
+            <input type="text" formControlName="correo" class="form-control" placeholder="Email" />
+          </div>
+          <div class="form-group">
+            <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraceña" />
+          </div>
+          <a (click)="status = 'register'">No tienes cuenta?</a>
+          <div class="form-group">
+            <button class="btn btn-primary">Login</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+</div>
+-->
 <div class="row">
-  <div class="col-4"></div>
-  <div class=" col-4">
-    <app-body></app-body>
+
+  <div class="col-3">
+
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body" *ngIf="status =='login'">
+        <h3>Login</h3>
+        <form>
+          <div class="form-group">
+            <input type="text" formControlName="correo" class="form-control" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraceña">
+          </div>
+          <a (click)="status = 'register'">No tienes cuenta?</a>
+          <div class="form-group">
+            <button class="btn btn-primary">Login</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-3">
   </div>
 </div>
