--- a/IonChat/src/app/muro/muro.component.css
+++ b/IonChat/src/app/muro/muro.component.css
@@ -1,8 +1,13 @@
 .footbarInput {
-    background-color: rgb(255, 255, 255);
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 60px;
-    position: relative;
-    padding: 0 38px 0 38px;
-  }
+  background-color: rgb(255, 255, 255);
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 60px;
+  position: relative;
+  padding: 0 38px 0 38px;
+}
+.muro-scroll {
+  height: 550px;
+  padding: 0px;
+  overflow-y: auto;
+}
