--- a/IonChat/src/app/login/login.component.html
+++ b/IonChat/src/app/login/login.component.html
@@ -1,7 +1,64 @@
-<app-navbar></app-navbar>
-<div class="row">
-  <div class="col-4"></div>
-  <div class=" col-4">
-    <app-body></app-body>
+<div class="row backgroundHome">
+  <div class="col-4">
+  </div>
+  <div class="col-4" *ngIf="estado =='login'">
+    <br>
+    <br>
+    <div class="card colorBorder">
+      <div class="card-body colorCards">
+        <h3>Login</h3>
+        <form>
+          <div class="form-group">
+            <input type="text" formControlName="correo" class="form-control" placeholder="Email" />
+          </div>
+          <div class="form-group">
+            <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraseña" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary">Login</button>
+          </div>
+          <div class="text-right">
+            <button class="btn btn-link" (click)="estado ='registro'">¿No tienes Cuenta?</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-4" *ngIf="estado =='registro'">
+    <br>
+    <br>
+    <div class="card colorBorder">
+      <div class="card-body colorCards">
+        <h3>Registro</h3>
+        <form>
+          <div class="row">
+            <div class="col-6 form-group">
+              <input type="text" formControlName="nombres" class="form-control" placeholder="Nombre" />
+            </div>
+            <div class="col-6 form-group">
+              <input type="text" formControlName="apellidos" class="form-control" placeholder="Apellido" />
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="text" formControlName="correo" class="form-control" placeholder="Email" />
+          </div>
+      
+      <div class="form-group">
+        <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraseña" />
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <h6>Fecha de Nacimiento</h6>
+        </div>
+        <div class="col-6 form-group">
+          <input type="date" formControlName="edad" class="form-control" placeholder="edad" />
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary">Registrarse</button>
+      </div>
+      </form>
+      </div>
+    </div>
   </div>
 </div>
