--- a/IonChat/src/app/muro/muro.component.html
+++ b/IonChat/src/app/muro/muro.component.html
@@ -1,5 +1,5 @@
 <br>
-<div #scrollBox class="muro-scroll" [scrollTop]="scrollBox.scrollHeight">
+<div class="muro-scroll" [scrollTop]="scrollBox.scrollHeight">
   <div class="card">
     <div class="card-header">
       <h5 class="card-title"><i class="fas fa-edit"></i>Publicacion</h5>
