--- a/IonChat/src/app/profile/profile.component.html
+++ b/IonChat/src/app/profile/profile.component.html
@@ -1,13 +1,14 @@
-<app-img></app-img>
+<div class="container-fluid marginPortada">
+  <div class="row">
+    <div class="divfotoPortada">
+      <img src="assets/img/portada.jpeg" class="fotoPortada" />
+      <div class="contenedorFotoPortada col-2">
+        
+          <img class="img-fluid img-thumbnail fotoPerfilPortada rounded-circle" src="assets/home.jpg" />
+        
+      </div>
+    </div>
 
-<div class="row">
-  <div class="col-1">
   </div>
-  <div class="col-4">
-    <app-imgper></app-imgper>
-    <app-foto></app-foto>
-  </div>
-  <div class="col-6">
-    <app-publicaciones></app-publicaciones>
-  </div>
+
 </div>
