--- a/IonChat/src/app/login/login.component.html
+++ b/IonChat/src/app/login/login.component.html
@@ -1,3 +1,6 @@
+<div data-role="cube"
+    data-color="bg-cyan bd-darkCyan"
+    data-flash-color="#aa00ff"></div>
 <div class="row backgroundHome">
   <div class="col-4">
   </div>
@@ -15,7 +18,7 @@
             <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraseña" />
           </div>
           <div class="form-group">
-            <button class="btn btn-primary" [routerLink]="['/home']" routerLinkActive="router-link-active" >Login</button>
+            <button class="btn btn-primary" [routerLink]="['/home']" routerLinkActive="router-link-active">Login</button>
           </div>
           <div class="text-right">
             <button class="btn btn-link" (click)="estado ='registro'">¿No tienes Cuenta?</button>
@@ -42,25 +45,25 @@
           <div class="form-group">
             <input type="text" formControlName="correo" class="form-control" placeholder="Email" />
           </div>
-      
-      <div class="form-group">
-        <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraseña" />
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <h6>Fecha de Nacimiento</h6>
-        </div>
-        <div class="col-6 form-group">
-          <input type="date" formControlName="edad" class="form-control" placeholder="edad" />
-        </div>
-      </div>
-      <div class="text-right">
-        <button class="btn btn-link" (click)="estado ='login'">¿Ya tienes Cuenta?</button>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" [routerLink]="['/home']">Registrarse</button>
-      </div>
-      </form>
+
+          <div class="form-group">
+            <input type="password" formControlName="contraseña" class="form-control" placeholder="Contraseña" />
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <h6>Fecha de Nacimiento</h6>
+            </div>
+            <div class="col-6 form-group">
+              <input type="date" formControlName="edad" class="form-control" placeholder="edad" />
+            </div>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" [routerLink]="['/home']">Registrarse</button>
+          </div>
+          <div class="text-right">
+            <button class="btn btn-link" (click)="estado ='login'">¿Ya tienes Cuenta?</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
