--- a/IonChat/src/app/profile/profile.component.html
+++ b/IonChat/src/app/profile/profile.component.html
@@ -3,12 +3,71 @@
     <div class="divfotoPortada">
       <img src="assets/img/portada.jpeg" class="fotoPortada" />
       <div class="contenedorFotoPortada col-2">
-        
-          <img class="img-fluid img-thumbnail fotoPerfilPortada rounded-circle" src="assets/home.jpg" />
-        
+        <img class="img-fluid img-thumbnail fotoPerfilPortada rounded-circle" src="assets/home.jpg" />
       </div>
     </div>
-
   </div>
-
+</div>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+</div>
+<br>
+<br>
+<div class="row">
+  <div class="col-1"></div>
+  <div class="col-7">
+    <div class="card">
+      <div class="card-header">
+        <h5 class="card-title"><i class="fas fa-edit"></i>Publicacion</h5>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-12">
+            <form>
+              <div class="form-group">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <div class="text-right">
+                <button type="button" class="btn btn-outline-primary">Publicar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
