--- a/IonChat/src/app/login/login.component.html
+++ b/IonChat/src/app/login/login.component.html
@@ -1,5 +1,9 @@
 <div class="row backgroundHome">
   <div class="col-4">
+    
+    <div id="donut3" data-role="donut" data-value="35"
+    data-hole=".6" data-stroke="#f5f5f5" data-fill="#9C27B0"
+    data-animate="10"></div>
   </div>
   <div class="col-4" *ngIf="estado =='login'">
     <br>
